# universal-pudo-engine

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  core_audit.txt  project_structure.txt  pyproject.toml  requirements.txt
docs/: architecture.md  coding-standards.md  database-design.md  development-guide.md  live_provider_strategy.md  orm-mapping.md  product-vision.md  provider_mapping_strategy.md  roadmap.md
docs/adr/: ADR-0001-provider-mapping-strategy.md  ADR-0002-credentials-strategy.md  ADR-0003-core-public-interfaces.md  ADR-0004-repository-boundary.md  README.md
docs/architecture/: project_status.md  project_structure.txt  project_structure_export.txt  project_structure_filtered.txt
docs/diagrams/: architecture.mmd
docs/integrations/: carrier_analysis_template.md  colissimo_analysis.md  colissimo_provider_design.md  provider_gap_analysis.md
migrations/: env.py
migrations/versions/: 2a99db1622c7_initial_schema.py  7b2c8f4a9d31_add_pickup_point_last_synced_at.py
src/universal_pudo/: __init__.py  main.py
src/universal_pudo/api/: __init__.py  dependencies.py
src/universal_pudo/application/: __init__.py
src/universal_pudo/domain/: __init__.py  provider_health.py
src/universal_pudo/infrastructure/: __init__.py
src/universal_pudo/providers/: __init__.py  exceptions.py
src/universal_pudo/scripts/: __init__.py  seed_demo_data.py  test_chronopost_live.py  test_mondial_relay_live.py
tests/api/: test_dependencies.py  test_main.py
tests/api/routers/: test_carriers_router.py  test_health_router.py  test_pickup_points_router.py
tests/api/schemas/: test_carrier_schema.py  test_pickup_point_schema.py
tests/application/use_cases/: test_deactivate_stale_pickup_points.py  (+9 more)
tests/domain/: test_address.py  test_carrier.py  test_carrier_account.py  test_carrier_capability.py  test_carrier_lifecycle.py  test_geolocation.py  test_pickup_point.py  test_pickup_type.py  test_provider_health.py
tests/providers/: test_colissimo_mapper.py  test_mondial_relay_mapper.py
(+92 files in other folders)
